--- a/_config.yml
+++ b/_config.yml
@@ -230,10 +230,10 @@ content:
       The protagonist is a human child, who was adopted by a community of "Thorns". Through Tarquin’s encounters with the "Thorns"—creatures who looks gentle can become dangerous, she gradually uncovers the reality behind appearances.
 
 
-      ![](images/mr_1.jpg)
-
-
       ![](images/mr_2.png)
+
+
+      ![](images/mr_1.jpg)
 
 
       ![](images/mr_3.jpg)
@@ -268,6 +268,12 @@ content:
 
 
       ![](images/B&G.jpg)
+
+
+      ![](images/B&G_7.jpg)
+
+
+      ![](images/B&G_2.jpg)
   - title: Character Design
     layout: text
     content: |
