--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ github_username:  miliuumeru
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: red_milian
-linkedin_username: huanhuan chen
+instagram_username: milian.red
+linkedin_username: milian-chen-26279b241
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
