--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ instagram_username: milian.red
 linkedin_username: milian-chen-26279b241
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: miliuumeru
+youtube_username: @miliuumeru
 # orcid_username: 0000-0000-0000-0000
 # googlescholar_username: D847cGsAAAAJ
 
