--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,9 @@ about_content: |
     - 2D: Clip Studio Paint, Photoshop
     - Programming: Python, Qt, Maya API, C++(basic familiarity)
 
+  Showreel:
+    - [**Link**](https://vimeo.com/1144815402)
+
 content:
   # - title: Projects
   #   layout: list
@@ -363,7 +366,7 @@ content:
     content: |
       **My interests?**
 
-      – Rock ’n’ roll and bass guitar (RHCP hell yes!!).
+      – Rock ’n’ roll and bass guitar (RHCP yes!!).
 
       – Games (RPG and shooting).
 
