--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ about_content: |
     - Programming: Python, Qt, Maya API, C++(basic familiarity)
 
   Showreel:
-    - [**Link**](https://vimeo.com/1144815402)
+    [**Link**](https://vimeo.com/1144815402)
 
 content:
   # - title: Projects
