--- a/_config.yml
+++ b/_config.yml
@@ -204,23 +204,23 @@ content:
 
 
       ![](images/Biopunk_1.jpg)
-  - title: Concept Design
-    layout: text
-    content: |
-      ![](images/Con_Poster.jpg)
+  # - title: Concept Design
+  #   layout: text
+  #   content: |
+  #     ![](images/Con_Poster.jpg)
 
 
-      #### **Overview**
-      The protagonist is a human child, who was adopted by a community of "Thorns". Through Tarquin’s encounters with the "Thorns"—creatures who looks gentle can become dangerous, she gradually uncovers the reality behind appearances.
+  #     #### **Overview**
+  #     The protagonist is a human child, who was adopted by a community of "Thorns". Through Tarquin’s encounters with the "Thorns"—creatures who looks gentle can become dangerous, she gradually uncovers the reality behind appearances.
 
 
-      ![](images/mr_2.png)
+  #     ![](images/mr_2.png)
 
 
-      ![](images/mr_1.jpg)
+  #     ![](images/mr_1.jpg)
 
 
-      ![](images/mr_3.jpg)
+  #     ![](images/mr_3.jpg)
   - title: Concept Design
     layout: text
     content: |
